--- a/css/base/base.css
+++ b/css/base/base.css
@@ -17,7 +17,8 @@ body * {
 body {
   display: inline-block;
   width: 100%;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   line-height: 1.625em;
   background-color: var(--secondary-color);
 }
