--- a/css/main.css
+++ b/css/main.css
@@ -6,14 +6,17 @@
   line-height: 1.2em;
 }
 .section-description {
+  font-size: 16px;
   color: #777;
   margin-bottom: 50px;
   text-align: center;
+  line-height: 1.2em;
+  margin-top: 40px;
 }
 .card {
   color: #777;
   background-color: #fff;
-  margin: 0 15px;
+  margin: 0 12px;
   padding: 25px;
 }
 .desc {
@@ -26,7 +29,7 @@
   color: #222;
   margin-bottom: 5px;
 }
-.slide-bar {
+.previousNext {
   display: flex;
   justify-content: center;
   gap: 2px;
@@ -41,7 +44,6 @@
 }
 .card img {
   object-fit: cover;
-  float: left;
   height: 33px;
   width: 33px;
   border-radius: 50%;
